force-app/main/default/objects/Sculpsure_Treatments_s__c/Sculpsure_Treatments_s__c.object-meta.xml
<CustomObject>
    <label>Sculpsure Treatment(s)</label>
    <nameField>
        <label>Sculpsure Treatments(s) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sculpsure Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>