force-app/main/default/objects/Sculpsure_Treatments_s__c/fields/PAC_1__c.field-meta.xml
<CustomField>
    <fullName>PAC_1__c</fullName>
    <label>PAC #1</label>
    <type>TextArea</type>
</CustomField>