force-app/main/default/objects/Sculpsure_Treatments_s__c/fields/PAC_4__c.field-meta.xml
<CustomField>
    <fullName>PAC_4__c</fullName>
    <label>PAC #4</label>
    <type>TextArea</type>
</CustomField>