force-app/main/default/objects/Sculpsure_Treatments_s__c/fields/Sculpsure_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Sculpsure_Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sculpsure Treatment</label>
    <referenceTo>Sculpsure_Treatment__c</referenceTo>
    <relationshipLabel>Sculpsure Treatments</relationshipLabel>
    <relationshipName>Sculpsure_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>